gradle: Workaround for Kotlin plugin fails on JDK 21